@@ -15,6 +15,9 @@ Major changes since man-db 2.5.7:
 
 	o Add support for XZ-compressed manual pages, thanks to Darren Salt.
 
+	o Try underscore-separated subpages as well as hyphen-separated
+	  ones, thanks to Tanguy Ortolo.
+
 man-db 2.5.7 (16 February 2010)
 ===============================
 
