@@ -1,3 +1,10 @@
+Sun Mar 21 21:59:54 GMT 2010  Tanguy Ortolo  <tanguy+debian@ortolo.eu>
+
+	* src/man.c (main): Try underscore-separated subpages as well as
+	  hyphen-separated ones (Debian bug #574641).
+	* man/man1/man.man1 (Finding manual pages): Document this.
+	* NEWS: Document this.
+
 Wed Mar 17 10:26:44 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	* gnulib: Import localcharset module.
